--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: #AAAAAA;
+  background-color: beige;
 }
 
 p.intro {
@@ -9,9 +9,9 @@ p.intro {
  }
 
 
-.flashy {
+.pow {
   color: red;
-  font-style: italic;
+  font-style: bolder;
 }
 
 
